--- a/docs/release/trg-10/trg-10-01.md
+++ b/docs/release/trg-10/trg-10-01.md
@@ -6,6 +6,7 @@ sidebar_position: 1
 | Status | Created     | Post-History            |
 |--------|-------------|-------------------------|
 | Draft  | 07-Feb-2025 | Initial version created |
+| Draft  | 21-Mar-2025 | Update with example integration for Java |
 
 ## Why
 
@@ -41,8 +42,7 @@ All exceptions should be documented and approved by the project's committer.
 
 2.1. **Tools for Code Coverage Measurement**
 
-- Recommended tool: **SonarCloud** as provided by Elipse Tractus-X. [Reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects)
-- Alternatives: **SonarQube, JaCoCo**
+- Recommended: **SonarQube Cloud** as provided by Elipse Tractus-X. [Reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects)
 - The tool used to track code coverage should be specified and documented within the respective project.
 
 2.2. **Regular Review**
@@ -60,3 +60,56 @@ All exceptions should be documented and approved by the project's committer.
 3.2. **Risk Analysis**
 
 - If the code coverage value falls below 80.0%, the potential risks should be documented and approved by the release management team.
+
+### 4. Examples and Resources
+
+#### 4.1. **Code Examples**
+
+An example of a GitHub workflow integration can be found below.
+
+```yaml
+name: "Run unit and integration tests"
+
+on:
+  pull_request:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+env:
+  JAVA_VERSION: 17
+
+jobs:
+  Test-and-Sonar:
+    permissions:
+      contents: read
+      checks: write
+      pull-requests: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '${{ env.JAVA_VERSION }}'
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: Run unit & integration tests
+        run: |
+          mvn -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -B verify
+
+      - name: Publish integration test results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: "${{ github.workspace }}/target/failsafe-reports/integration-tests.xml"
+          check_name: "Integration Test Results"
+
+      - name: Publish unit test results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: "**/surefire-reports/unit-tests.xml"
+          check_name: "Unit Test Results"
+```
